# Calculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
nodes/: Divide.cpp  Divide.h  INode.h  Multipl.cpp  Multipl.h  Negate.cpp  Negate.h  Substr.cpp  Substr.h  Subtract.cpp  Subtract.h  Sum.cpp  Sum.h  Value.cpp  Value.h  Variable.cpp  Variable.h
parser/: ExpressionParser.cpp  ExpressionParser.h  Token.h  Tokenizer.cpp  Tokenizer.h  printTokens.h
tests/: TestIntegration.cpp  TestSum.cpp  TestTokenizer.cpp
utils/: VariableInput.cpp  VariableInput.h  VariableResolver.cpp  VariableResolver.h
